<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#a1eff7">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="23dp"
                android:layout_height="25.5dp"
                android:layout_marginVertical="10.5dp"
                android:layout_marginStart="0dp"
                android:background="@color/white"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"

                android:src="@drawable/iconlock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="328dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:paddingLeft="0dp"
                android:paddingTop="2.5dp"
                android:paddingBottom="2.5dp"
                android:text="@string/Link"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="75dp"
            android:layout_height="27dp"
            android:layout_margin="10dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:src="@drawable/iconhome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:id="@+id/imageView10"
            android:layout_width="24dp"
            android:layout_height="23dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/iconmenu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="89dp"
            android:layout_height="26dp"
            android:layout_gravity="center"
            android:text="@string/Developers"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="33dp"
            android:layout_height="29dp"
            android:layout_marginTop="-2dp"
            app:srcCompat="@drawable/iconandroid" />

        <TextView
            android:textColor="#1E90FF"
            android:textSize="15dp"
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ComeIn"
            android:layout_marginTop="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#022740"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="231dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:text="@string/ANDROIDFORDEVELOPERS"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34dp"
            android:textStyle="bold"
            tools:layout_conversion_absoluteHeight="40dp"
            tools:layout_conversion_absoluteWidth="411dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="85dp" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="40dp"
            android:text="@string/TextAndroid"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp"
            tools:layout_conversion_absoluteHeight="68dp"
            tools:layout_conversion_absoluteWidth="411dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="126dp" />

        <SearchView
            android:layout_marginBottom="60dp"
            android:layout_width="368dp"
            android:layout_height="37dp"
            android:layout_gravity="center"
            android:background="@color/white"
            tools:layout_conversion_absoluteHeight="25dp"
            tools:layout_conversion_absoluteWidth="378dp"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="194dp" />
    </LinearLayout>

    <LinearLayout
        android:background="#bbe4fc"
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="57dp"
            android:layout_height="49dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="14dp"
            android:layout_marginTop="-5dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/iconandroid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="290dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/Download"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:id="@+id/imageView17"
            android:layout_width="23dp"
            android:layout_height="24dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/icondownload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:background="#bbe4fc"
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <ImageView
            android:layout_marginLeft="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/imageView18"
            android:layout_width="57dp"
            android:layout_height="49dp"
            android:src="@drawable/icongamepad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_gravity="center"
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:text="@string/Launch"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <ImageView

            android:layout_gravity="center"
            android:layout_marginEnd="18dp"
            android:id="@+id/imageView19"
            android:layout_width="25dp"
            android:layout_height="26dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/iconlink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:background="#bbe4fc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <ImageView
            android:layout_marginLeft="12dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/imageView20"
            android:layout_width="57dp"
            android:layout_height="49dp"
            android:src="@drawable/icongraduate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="183dp"
            android:layout_height="27dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/View"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>