<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="0dp"
        android:orientation="vertical"
        android:background="#e8f578"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f4fabe"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/iconpcandphone" />

            <TextView
                android:id="@+id/textView1"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Smart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#e3e3e3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/iconuserlocation" />

            <TextView
                android:id="@+id/textView2"
                android:textSize="24dp"
                android:layout_gravity="center"
                android:gravity="right"
                android:textColor="@color/black"
                android:paddingRight="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/KM" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#e3e3e3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/iconsfire" />

            <TextView
                android:id="@+id/textView3"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingRight="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Kcal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#e3e3e3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/iconclock" />

            <TextView
                android:id="@+id/textView4"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingRight="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Min" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#e3e3e3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/iconrotate" />

            <TextView
                android:id="@+id/textView5"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:paddingRight="35dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Steps" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#e3e3e3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        app:srcCompat="@drawable/iconspeedometer" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/Kg"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="190dp"
                    android:layout_height="130dp"
                    android:baselineAligned="false"
                    android:paddingLeft="5dp"
                    android:paddingRight="15dp"
                    app:srcCompat="@drawable/img" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#e3e3e3">

                <LinearLayout
                    android:layout_width="164dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:paddingTop="20dp">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"
                        app:srcCompat="@drawable/iconheart" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"

                        android:text="@string/Bmp"
                        android:textColor="@color/black"
                        android:textSize="20dp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    app:srcCompat="@drawable/img_2"
                    android:padding="10dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>